# environments_mpm

./: environment.yml  pyproject.toml  requirements.txt  setup.py
envtest/: __init__.py  builtins.py
scripts/: smooth_image.py  solve_matrix_equation.py
